# Wormz

./: README.md
backend/: .env.example  .gitignore  db.sqlite3  pyproject.toml  requirements.txt  wormz.json
backend/catalog/: settings.py  urls.py
backend/core/: admin.py  models.py  serializers.py  views.py
backend/core/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_genre_pref_and_more.py  0002_remove_user_cod_bookshelf_bookshelf_user.py  0003_remove_user_email_remove_user_password.py  0003_review.py  0004_remove_user_admin_remove_user_genre_pref_and_more.py  0004_rename_cod_book_review_book_and_more.py  0005_answer_form_resolves_question_form_question_and_more.py  0005_book_link_book_price.py  0005_user_cod_user.py  0006_answerassociativa.py  0007_alter_answer_status.py  0008_remove_form_user.py  0009_alter_resolves_options.py  0010_remove_question_answer.py  0011_remove_question_genres_question_genres.py  0012_answerassociativa_cod_forms.py  0013_remove_form_name_forms_form_cod_form.py  0014_rename_cod_form_form_name_forms.py  0015_merge_20221208_1423.py
backend/core/models/: __init__.py  answer.py  answer_associativa.py  author.py  book.py  bookshelf.py  form.py  genre.py  own.py  question.py  resolves.py  review.py  type.py  user.py  writes.py
backend/core/serializers/: __init__.py  answer.py  answer_associativa.py  author.py  book.py  bookshelf.py  form.py  genre.py  own.py  question.py  resolves.py  review.py  type.py  user.py  writes.py
backend/core/views/: __init__.py  (+14 more)
backend/djangovue/: asgi.py  settings.py  urls.py  wsgi.py
(+88 files in other folders)
