[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["KauaneDelvoss <delvoss.ribas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1"
black = "^22.6.0"
djangorestframework = "^3.13.1"
djangorestframework-simplejwt = "^5.2.0"
django-cors-headers = "^3.13.0"
django-rest-framework = "^0.1.0"
nuxt = "^0.1.0"
waitress = "^2.1.2"
python-magic = "^0.4.27"
pillow = "^9.2.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
